fixed logo spacing in header in roadmap index.htmla

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #47b2e4;
 }
 #header .logo img {
-  max-height: 100px;
+  max-height: 80px;
   width: 150px;
 }
 #header .logo1 img {
